  ADDED: Support for NullBooleanField.
         (thanks to jaap, resolves issue 34)
  ADDED: Setting to override the default language.
         (thanks to jaap, resolves issue 2)
  ADDED: Support for related fields - ForeignKey, ManyToManyField and
         OneToOneField.
         (resolves issue 15)

  FIXED: Kept backwards compatibility with Django-1.0.
         (thanks to jaap, resolves issue 34)
  FIXED: Regression in south_field_triple caused by r55.
         (thanks to jaap, resolves issue 29)
  FIXED: TranslationField pre_save does not get the default language
         correctly.
         (thanks to jaap, resolves issue 31)

v0.2
====
Date: 2010-06-15
Packaged from revision 57.

  ADDED: Support for admin prepopulated_fields.
         (resolves issue 21)
  ADDED: Support for admin list_editable.
         (thanks carl.j.meyer, resolves issue 20)
  ADDED: Preserve the formfield widget of the translated field.
         (thanks piquadrat)
  ADDED: Initial support for django-south.
         (thanks andrewgodwin, resolves issue 11)
  ADDED: Support for admin inlines, common and generic.
         (resolves issue 12 and issue 18)

  FIXED: Admin form validation errors with empty translated values and
         unique=True.
         (thanks to adamsc, resolves issue 26)
  FIXED: Mangling of untranslated prepopulated fields.
         (thanks to carl.j.meyer, resolves issue 25)
  FIXED: Verbose names of translated fields are not translated.
         (thanks to carl.j.meyer, resolves issue 24)
  FIXED: Race condition between model import and translation registration in
         production by ensuring that models are registered for translation
         before TranslationAdmin runs.
         (thanks to carl.j.meyer, resolves issue 19)
  FIXED: Added workaround for swallowed ImportErrors by printing a traceback
         explicitly.
         (resolves issue 17)
  FIXED: Only print debug statements to stdout if the runserver or